--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "tmp",
+  "name": "pokemons",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "antd": "^4.16.1",
+    "axios": "^0.21.1",
+    "eslint-config-standard": "^16.0.3",
+    "node-sass": "^6.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.34.1",
+    "sass-loader": "^12.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
