--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.8.1",
     "antd": "^4.16.1",
     "axios": "^0.21.1",
+    "chart.js": "^3.4.1",
     "eslint-config-standard": "^16.0.3",
     "node-sass": "^6.0.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
