fix small bug, add description

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://BohdanAlieksieiev.github.io/Pokedex",
+  "homepage": "http://BohdanAlieksieiev.github.io",
   "name": "pokemons",
   "version": "0.1.0",
   "private": true,
